@@ -246,8 +246,9 @@ class Component(object):
             raise batou.UpdateNeeded()
         self.assert_no_subcomponent_changes()
 
-    def cmd(self, cmd, silent=False, ignore_returncode=False):
-        return batou.utils.cmd(cmd, silent, ignore_returncode)
+    def cmd(self, cmd, silent=False, ignore_returncode=False,
+            communicate=True):
+        return batou.utils.cmd(cmd, silent, ignore_returncode, communicate)
 
     def map(self, path):
         path = os.path.expanduser(path)
